# CMakeList.txt : CMake project for test1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("test1")

# Add source to this project's executable.
add_executable (test1 "test1.cpp" "test1.h")

# TODO: Add tests and install targets if needed.
